<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="real_estate_imageView_contentDescription">Real Estate Pictures</string>

    <!-- Bottom navigation-->
    <string name="map">Map View</string>
    <string name="list">List View</string>

    <!-- Dropdown type de biens immobilier-->
    <string name="house">House</string>
    <string name="flat">Flat</string>
    <string name="loft">Loft</string>
    <string name="duplex">Duplex</string>
    <string name="land">Land</string>
    <string name="other">Other</string>

    <!--Add RealEstate Fragment xml -->
    <string name="add_new">Add new</string>
    <string name="type">Type</string>
    <string name="price">Price :</string>
    <string name="floorArea">Floor Area</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="poi">Point of Interest</string>
    <string name="Status">Status</string>
    <string name="upForSaleDate">Up for sale date :</string>
    <string name="sold_date">Sold Date</string>
    <string name="sold_date_title">Sold Date :</string>
    <string name="Agent">Agent</string>

    <!--Operations menu -->
    <string name="add_real_estate">Add Real Estate</string>
    <string name="edit_real_estate">Edit Real Estate</string>
    <string name="filter_off">Filter off</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>

    <!--add form menu -->
    <string name="save_button">Save</string>

    <!--Confirmation Dialog -->
    <string name="confirmation_message">Unsaved changes will be lost. Continue ?</string>

    <string name="yes">yes</string>
    <string name="no">no</string>

    <!-- Point of interest -->
    <string name="school">School</string>
    <string name="transportation">Transportation</string>
    <string name="shops">Shops</string>
    <string name="hospitals">Hospitals</string>
    <string name="restaurant">Restaurants</string>
    <string name="pharmacy">Pharmacy</string>

    <!--DrawerLayout -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="picture">Picture(s) :</string>
    <string name="unspecified">unspecified</string>

    <string name="add_pictures_from_gallery">Add pictures\nfrom gallery</string>
    <string name="add_pictures_from_camera">Add pictures\nfrom camera</string>
    <string name="no_realestate">No Real Estate \n added</string>

    <string name="Sold">Sold</string>
    <string name="forSale">For Sale</string>


    <string name="date">%1$s/%2$s/%3$s</string>
    <string name="location">Location</string>

    <!--Number of Rooms -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five_and_more">5+</string>

    <string name="adress">Insert an Address :</string>
    <string name="app_icon">Application Icon</string>
    <string name="no_picture">No Picture</string>
    <string name="no_picture_icon">No Picture Icon</string>

    <string name="currency">Currency</string>
    <string name="euros">Euros</string>
    <string name="dollars">Dollars</string>
    <string name="Apply">Apply Filter</string>
    <string name="filterTitle">Filter</string>
    <string name="RealEstate">Real Estate Manager</string>
    <string name="Map">Map</string>
    <string name="real_estate_pictures">Real Estate Pictures</string>
    <string name="delete_icon">Delete icon</string>
    <string name="filter_by">Filter by :</string>
    <string name="all">All</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="min_floorArea">Min surface</string>
    <string name="max_floorAre">Max surface</string>
    <string name="selectedAddress">Selected Address :</string>
    <string name="no_address_selected">No address selected</string>
    <string name="created_the">Form Created The :</string>
    <string name="Manage">Manage by :</string>
    <string name="not_connected">Not Connected</string>
    <string name="pictures_description">Description</string>
    <string name="picture_title">Title :</string>
    <string name="ok">OK</string>
    <string name="sold_banner">SOLD</string>
    <string name="update">Update</string>
    <string name="archived_property">Archived property</string>

    <!--Currency-->
    <string name="euros_symbol">€</string>
    <string name="dollar_symbol">$</string>

    <!--Loan Simulator-->
    <string name="loan_amount_hint">Loan amount in %s</string>
    <string name="loan_simulator_payment_result">%1s per year\\n%2s per month</string>
    <string name="loan_simulator_calculate_button_error_message">Please enter a value</string>
    <string name="loan">Loan</string>

    <!--PlaceHolders-->
    <string name="unknown_type">Unknown Type</string>
    <string name="unknown_price">Unknown Price</string>
    <string name="unknown_surface">Unknown Surface</string>

    <!--Toast-->
    <string name="successfully_added">Successfully added</string>

</resources>
