<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingBottom="32dp"
        android:paddingTop="4dp"
        tools:context=".ui.filter.FilterFragment">

        <TextView
            android:id="@+id/filter_form_textView_type_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/type"
            android:textColor="@color/title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/filter_form_cardView_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_form_textView_type_title">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filter_form_chipGroup_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                app:chipSpacingHorizontal="24dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_form_chip_house"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_form_chip_flat"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flat" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_form_chip_loft"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loft" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_form_chip_duplex"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duplex" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_form_chip_land"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/land" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_form_chip_other"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/filter_realEstate_TextView_title_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/title"
            android:hint="@string/Status"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_form_cardView_type" />


        <androidx.cardview.widget.CardView
            android:id="@+id/filter_form_cardView_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_realEstate_TextView_title_status">

            <RadioGroup
                android:id="@+id/radioGroup_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filter_realEstate_TextView_title_status">

                <RadioButton
                    android:id="@+id/radio_button_to_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/forSale" />

                <RadioButton
                    android:id="@+id/radio_button_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Sold" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/filter_realEstate_TextView_title_number_of_rooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/number_of_rooms"
            android:textColor="@color/title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_form_cardView_status" />

        <androidx.cardview.widget.CardView
            android:id="@+id/filter_form_cardView_number_of_rooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_realEstate_TextView_title_number_of_rooms">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_realEstate_TextView_title_number_of_rooms">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/one" />

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/two" />

                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/three" />

                <RadioButton
                    android:id="@+id/radio_button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/four" />

                <RadioButton
                    android:id="@+id/radio_button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/five_and_more" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/filter_realEstate_TextView_POI_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/poi"
            android:textColor="@color/title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_form_cardView_number_of_rooms" />


        <androidx.cardview.widget.CardView
            android:id="@+id/filter_form_cardView_POI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_realEstate_TextView_POI_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/filter_realEstate_CheckBox_school"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/school"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/filter_realEstate_CheckBox_transportation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/transportation"
                    app:layout_constraintStart_toEndOf="@id/filter_realEstate_CheckBox_school"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/filter_realEstate_CheckBox_restaurant"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/restaurant"
                    app:layout_constraintStart_toEndOf="@id/filter_realEstate_CheckBox_transportation"
                    app:layout_constraintTop_toTopOf="parent" />


                <CheckBox
                    android:id="@+id/filter_realEstate_CheckBox_hospitals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/hospitals"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filter_realEstate_CheckBox_school" />

                <CheckBox
                    android:id="@+id/filter_realEstate_CheckBox_pharmacie"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/pharmacy"
                    app:layout_constraintStart_toEndOf="@id/filter_realEstate_CheckBox_hospitals"
                    app:layout_constraintTop_toBottomOf="@id/filter_realEstate_CheckBox_school" />

                <CheckBox
                    android:id="@+id/filter_realEstate_CheckBox_shops"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/shops"
                    app:layout_constraintStart_toEndOf="@id/filter_realEstate_CheckBox_pharmacie"
                    app:layout_constraintTop_toBottomOf="@id/filter_realEstate_CheckBox_school" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_realEstate_TextInputLayout_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_form_cardView_POI">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_realEstate_TextInputEditText_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/price"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_realEstate_TextInputLayout_surface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_realEstate_TextInputLayout_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_realEstate_TextInputEditText_surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/floorArea"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_realEstate_TextInputLayout_real_estate_agent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:bottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_realEstate_TextInputLayout_surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_TextInputEditText_real_estate_agent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/Agent"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/filter_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/Apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_realEstate_TextInputLayout_real_estate_agent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
