<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <TextView
        android:id="@+id/confirmation_dialog_textView"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:text="@string/confirmation_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmation_dialog_button_no"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:minWidth="64dp"
        android:text="@string/no"
        app:layout_constraintTop_toTopOf="@+id/confirmation_dialog_button_yes"
        app:layout_constraintBottom_toBottomOf="@+id/confirmation_dialog_button_yes"
        app:layout_constraintEnd_toStartOf="@id/confirmation_dialog_button_yes" />

    <Button
        android:id="@+id/confirmation_dialog_button_yes"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:minWidth="64dp"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_dialog_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
