<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.add_real_estate.AddRealEstateActivity">

        <TextView
            android:id="@+id/real_estate_details_textView_pictures_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/real_estate_details_photo_list_fragment_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/real_estate_details_textView_pictures_title"
            />

        <TextView
            android:id="@+id/real_estate_details_textView_description_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_estate_details_photo_list_fragment_container"/>

        <TextView
            android:id="@+id/real_estate_details_textView_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_estate_details_textView_description_title"
            tools:text="@sample/realEstate.json/data/description"/>

        <TextView
            android:id="@+id/real_estate_details_textView_surface_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/floorArea"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_estate_details_textView_description"/>

        <TextView
            android:id="@+id/real_estate_details_textView_numberOfRoom_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_rooms"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_estate_details_textView_description"/>

        <TextView
            android:id="@+id/real_estate_details_textView_poi_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/poi"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_estate_details_textView_numberOfRoom_title"/>

        <TextView
            android:id="@+id/real_estate_details_textView_location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_estate_details_textView_poi_title"/>

        <TextView
            android:id="@+id/real_estate_details_textView_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/real_estate_details_textView_location_title"
            tools:text="@sample/realEstate.json/data/location"            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>